# samost-rpg-console

./: CMakeLists.txt
include/: being.hpp  translate.hpp
src/: main.cpp
